--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
     color: steelblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -22,5 +22,29 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0;
+}
+
+main {
+    max-width: 800px;
+}
+
+aside {
+    width: 200px;
+    margin: 0;
+    border: 0 2px solid steelblue;
+    padding: 20px;
+    background-color: aliceblue;
+    color: black;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 1rem;
+    border-top: 1px dashed slategray;
+    text-align: center;
 }
