--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ main {
 aside {
     width: 200px;
     margin: 0;
-    border: 0 2px solid steelblue;
+    border: 2px solid steelblue;
     padding: 20px;
     background-color: aliceblue;
     color: black;
