--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -19,6 +25,7 @@ main img {
     border: 1px solid steelblue;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
 }
 
 p {
@@ -31,11 +38,7 @@ main {
 
 aside {
     width: 200px;
-    margin: 0;
-    border: 2px solid steelblue;
-    padding: 20px;
-    background-color: aliceblue;
-    color: black;
+    position: relative;
 }
 
 aside img {
@@ -43,8 +46,23 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    left: 90px;
+    top: 25px;
+}
+
 footer {
     margin-top: 1rem;
     border-top: 1px dashed slategray;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 2px solid aliceblue;
+    background-color: beige;
+    color: darkblue;
 }
