--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,6 +14,8 @@
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -34,8 +36,32 @@ a {
 body {
     font-family: var(--paragraph-font);
     max-width: 960px;
-    padding: 20px;
+    /* padding: 20px; */
     margin: 0 auto;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    align-items: center;
+    justify-items: center;
+    padding: 24px 0;
+}
+
+header img {
+    max-width: 100px;
+}
+
+nav {
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+section {
+    padding: 2rem;
+    margin: 1rem 0;
 }
 
 .hero {
@@ -73,4 +99,61 @@ body {
     float: right;
     width: 180px;
     margin-left: 1rem;
+}
+
+.history h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.history div {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.adventures {
+    display: grid;
+    gap: 1rem;
+}
+
+.adventures h2 {
+    text-align: center;
+    grid-column: 1 / 6;
+}
+
+.adventures figure {
+    grid-row: 2 / 3;
+}
+
+.adventures figure img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    padding: 1rem;
+    margin-top: 2rem;
+    background-color: var(--accent1-color);
+    align-items: center;
+    color: #fff;
+}
+
+footer p {
+    text-align: center;
+    grid-column: 2 / 3;
+}
+
+footer nav {
+    grid-column: 3 / 4;
+    display: flex;
+    align-items: center;
+}
+
+footer nav img {
+    display: flex;
+    align-items: center;
 }
